--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "./node_modules/bootstrap/dist/css/bootstrap.css",
+              "./node_modules/ng-zorro-antd/ng-zorro-antd.css",
+              "./node_modules/font-awesome/css/font-awesome.css"           
             ],
             "scripts": []
           },
