--- a/package.json
+++ b/package.json
@@ -16,9 +16,16 @@
     "@angular/compiler": "~8.2.11",
     "@angular/core": "~8.2.11",
     "@angular/forms": "~8.2.11",
-    "@angular/platform-browser": "~8.2.11",
+    "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
+    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "angular-font-awesome": "^3.1.2",
+    "bootstrap": "^4.4.1",
+    "font-awesome": "^4.7.0",
+    "ng-zorro-antd": "^8.5.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
