--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,10 @@
               "./node_modules/ng-zorro-antd/ng-zorro-antd.css",
               "./node_modules/font-awesome/css/font-awesome.css"           
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.js"
+            ]
           },
           "configurations": {
             "production": {
