--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
+    "github": "^14.0.0",
     "ng-zorro-antd": "^8.5.2",
+    "ngx-indexed-db": "^4.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
